# WordleGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Board.h  Game.h  Wordle.h  WordsList.h  constants.h
src/: Board.cpp  Game.cpp  Wordle.cpp  WordsList.cpp
utils/: make_wordlists.py
utils/wordlists/: words_de.txt  words_en.txt  words_es.txt  words_it.txt  words_zh.txt
